# hop.kak

./: Cargo.toml  README.md  hop.kak  rustfmt.toml
doc/: design.md
src/: main.rs
