[package]
name = "hop-kak"
version = "0.1.0-dev"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
edition = "2021"
rust-version = "1.71"
description = "Hinting binary for Kakoune"
readme = "README.md"
repository = "https://github.com/phaazon/hop.kak"
license = "BSD-3-Clause"
keywords = ["hint", "kakoune"]
categories = []
publish = false

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
unicode-segmentation = "1.10.1"
